# discord-channel-archiver

./: .gitignore  Cargo.toml  flake.nix  licence.md  readme.md  result
.circleci/: config.yml
src/: emoji.rs  error.rs  file.rs  html.rs  json.rs  main.rs
src/html_templates/: core.css  dark.css  light.css  message_group.liquid  postamble_template.html  postamble_template.liquid  preamble_template.html  preamble_template.liquid
