[package]
name = "discord-channel-archiver"
version = "0.4.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures = "0.3.28"
regex = "1.7.3"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.160"
serde_json = "1.0.96"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
once_cell = "1.17.1"
liquid = "0.26.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
indoc = "1.0.9"

[dependencies.serenity]
default-features=false
features=["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"]
version = "0.11.5"

[profile.release]
debug = true

