[package]
name = "discord-channel-archiver"
version = "0.4.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
regex = "1.9.1"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.180"
serde_json = "1.0.104"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
once_cell = "1.18.0"
liquid = "0.26.0"
thiserror = "1.0.44"
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
indoc = "1.0.9"

[dependencies.serenity]
default-features=false
features=["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"]
version = "0.11.6"

[profile.release]
debug = true

