[package]
name = "discord-channel-archiver"
version = "0.4.0"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.30"
regex = "1.9.6"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.193"
serde_json = "1.0.108"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
once_cell = "1.19.0"
liquid = "0.26.0"
thiserror = "1.0.53"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
indoc = "1.0.9"

[dependencies.serenity]
default-features=false
features=["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"]
version = "0.11.6"

[profile.release]
debug = true

